# StudyEngine

./: .gitignore  CLAUDE.md  CLAUDE.original.md  CONTEXT.md  README.md  pyproject.toml  requirements-dkt.txt  requirements.txt
.claude/: settings.json
data/: app.db.bak-20260625231508
docs/: ARCHITECTURE.md  ROADMAP.md  planned-issues.md
docs/adr/: 0001-two-runs-combo-vs-record.md  0002-one-studyloop-drives-both-front-ends.md  0003-generator-owns-its-worked-solution.md
engine/: api.py  config.py  engagement.py  grading.py  loop.py  mathfmt.py  quests.py  service.py  settings.py  stats.py
engine/analytics/: readiness.py
engine/cli/: app.py  dashboard.py  fsrs_fit.py  remind.py  study.py  train.py
engine/db/: connection.py  dao.py  schema.sql  seed.py
engine/feedback/: solve.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: port_examp_progress.py  port_examp_theory.py  termux_setup.sh
tests/: conftest.py  test_api.py  test_availability.py  test_dashboard.py  test_databases.py  test_diffeq.py  test_dkt.py  test_engagement.py  test_exam_dates.py  test_examfm.py  test_examp.py  test_fsrs_fit.py  test_global.py  test_leech_treatment.py  test_mathfmt.py  test_more_generators.py  test_next_retry.py  test_pretrain.py  test_priority_features.py  test_proofs215.py  test_proofs_econ.py  test_quests.py  test_recall_and_grading.py  test_record_tracker.py  test_records.py  test_scheduler.py  test_seed.py  test_session_resume.py  test_settle_answer.py  test_studyloop.py  test_suppression.py  test_theory_coverage.py  test_user_cards.py
(+59 files in other folders)
