[project]
name = "study-engine"
version = "0.1.0"
description = "Multi-subject adaptive study engine (FSRS scheduling + per-subject problem generators / recall cards)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
